Bug 96604 - gtk3: Impossible to select an entry with mouse in some lists
Summary: gtk3: Impossible to select an entry with mouse in some lists
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0
Keywords: bibisected, regression
: 96820 97032 97240 97307 97938 98191 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-19 18:33 UTC by Julien Nabet
Modified: 2016-10-25 19:02 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2015-12-19 18:33:06 UTC
On pc Debian x86-64 with master sources updated today, I can't select an entry with mouse for some menus, eg:
1) Open LO
2) Open 'Remote Files'
3) Click 'Add service' button at top right of "Remote file" dialogs.
Then impossible to select an entry with the mouse. (however it's possible with arrow keys).

I've got this problem only with SAL_USE_VCLPLUGIN=gtk3, not with gtk or gen.
Comment 2 Maxim Monastirsky 2015-12-30 07:50:42 UTC
*** Bug 96820 has been marked as a duplicate of this bug. ***
Comment 3 Maxim Monastirsky 2015-12-30 08:00:25 UTC
It's a regression of:

commit 8d5822983e9b6a1e04874ce4d2c807fd0cf1ee04
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Mon Dec 14 11:36:50 2015 +0000

    Related: rhbz#1290014 gtk3: use gtk_window_set_modal on modal dialogs
    
    which makes modal dialogs (which are most of them) place correctly
    under wayland. Modeless ones are still uselessly shoved far to the
    left, but this makes things near usable and gives the same "graying
    into the bg" effect for the main window as other gtk apps
    
    Change-Id: If1486feb7631c5a0c2aa6efac3a6b9dd1b215daf
Comment 4 Maxim Monastirsky 2016-01-11 07:06:11 UTC
*** Bug 97032 has been marked as a duplicate of this bug. ***
Comment 5 Caolán McNamara 2016-01-19 13:28:41 UTC
fixed or at least worked around with http://cgit.freedesktop.org/libreoffice/core/commit/?id=011ce226e89ecabaf621603d692547c88061eaba (used wrong bug id, sigh)
Comment 6 Maxim Monastirsky 2016-01-20 20:28:51 UTC
*** Bug 97240 has been marked as a duplicate of this bug. ***
Comment 7 Julien Nabet 2016-01-20 20:33:34 UTC
I tried again after having updated my local repo, it works now! Thank you Caolan!

(nitpick: I noticed this on console:
warn:vcl.layout:21018:1:vcl/source/window/builder.cxx:1755: probably need to implement GtkCellRendererText or add a makeGtkCellRendererText function)
Comment 8 Maxim Monastirsky 2016-01-21 23:45:26 UTC
*** Bug 97307 has been marked as a duplicate of this bug. ***
Comment 9 Buovjaga 2016-02-18 18:49:51 UTC
*** Bug 97938 has been marked as a duplicate of this bug. ***
Comment 10 Maxim Monastirsky 2016-02-25 18:23:27 UTC
*** Bug 98191 has been marked as a duplicate of this bug. ***
Comment 11 Julien Nabet 2016-05-07 09:59:37 UTC
With master sources updated today, I could reproduce this exact problem.
Comment 12 Commit Notification 2016-05-08 15:31:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7c775c157693b076b014104b3548d202e0267895

Resolves: tdf#96604 remove and restore full stack of grabs

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.