Resolves: tdf#96604 remove and restore full stack of grabs

Change-Id: I51b5943f52ccdce6b4b50131f5f2b7d2c1ff7368